Removed resume json from html

--- a/LChristakisResume.html
+++ b/LChristakisResume.html
@@ -1,123 +1,10 @@
 <html>
     <head>
         <title>Luke Christakis</title>
-        <script type="text/javascript">
-            LukeChristakisResume = {
-                "skillsets" : [
-                    {
-                        "title" : "Front End Development",
-                        "skills" : [ "HTML", "CSS", "Javascript", "Jquery" ]
-                    },{
-                        "title" : "Back End Development",
-                        "skills" : [ "Python", "PostgreSQL", "PHP", "Perl", "C/C++" ]
-                    },{
-                        "title" : "DevOps",
-                        "skills" : [ "Linux", "Bash", "Docker", "AWS", "Heroku" ]
-                    },{
-                        "title" : "General",
-                        "skills" : [ "Git", "Subversion", "Microsoft Office" ]
-                    }
-                ],
-                "employment" : [
-                    {
-                        "company" : "PeopleGIS",
-                        "title" : "Full Stack Developer",
-                        "start_year" : 2016,
-                        "end_year" : null,
-                        "accomplishments" : [
-                            "Building new applications to improve client efficiency (Linux, PostgreSQL, Python, PHP, Javascript)",
-                            "Creating testing framework for new and exisiting systems (Javascript, Docker, Mocha, PyUnit)",
-                            "Maintaining and extending existing applications in the browser and on Ubuntu servers (PHP, Javascript)",
-                            "Developing and managing new microservices (Docker, ECS)"
-                        ]
-                    },{
-                        "company" : "CityTwist",
-                        "title" : "Software Engineer",
-                        "start_year" : 2015,
-                        "end_year" : 2016,
-                        "accomplishments" : [
-                            "Developed software and restful APIs for managing/monitoring business-critical systems (Python, Javascript, Angular, PHP, Perl)",
-                            "Built tools for deployment of scalable infrastructure (FreeBSD, Ubuntu Linux, Bash, Perl)",
-                            "Created tools to assist other business units (Javascript, Python)"
-                        ]
-                    },{
-                        "company" : "Babcock Power",
-                        "title" : "Help Desk Technician",
-                        "start_year" : 2012,
-                        "end_year" : 2014,
-                        "accomplishments" : [
-                            "Maintained Windows PCs for more than 1000 local and remote users",
-                            "Kept PC inventory up to date by writing SQL reports on available and in-use equipment",
-                            "Wrote scripts to automate software installations and updates"
-                        ] 
-                    },{
-                        "company" : "Christakis Pediatrics",
-                        "title" : "Web Administrator",
-                        "start_year" : 2009,
-                        "end_year" : 2010,
-                        "accomplishments" : [
-                            "Maintained PHP-based website for medical practice (Bocachild.com)",
-                            "Liason between company president and web developer"
-                        ]
-                    }
-                ],
-                "education" : [
-                    {
-                        "school" : "Oregon State University",
-                        "graduation_year" : 2015,
-                        "degree" : "Bachelors of Science",
-                        "field" : "Computer Science",
-                        "GPA" : 3.82
-                    },{
-                        "school" : "University of Florida",
-                        "graduation_year" : 2010,
-                        "degree" : "Bachelors of Science",
-                        "field" : "Microbiology",
-                        "GPA" : 3.35
-                    }
-                ]
-            }
-        </script>
-        <style>
-            div.container {
-                margin: 1em;
-            }
-            div.employment-header > div{
-                font-size: 1em;
-                font-weight: bolder;
-                display: block;
-            }
-            div.employment-header {
-                margin-top: 0em;
-            }
-            div.employment-header > div.employment-title {
-                float: left;
-            }
-            div.employment-header > div.employment-date {
-                float: right;
-            }
-            div.employment-body {
-                clear: left;
-                padding-top: 0em;
-            }
-            div.employment-body > ul > li {
-                padding: 0.1em;
-            }
-            div.section-header > h2 {
-                margin: 0em;
-            }
-            h1.name-header {
-                font-size: 2em;
-                font-weight: bolder;
-                margin: 0em;
-            }
-            ul {
-                padding-bottom: 0.1em;
-                padding-left: 0.5em;
-                margin-top: 0.1em;
-                margin-bottom: 0.1em;
-            }
-        </style>
+        <script type="text/javascript" src="/js/Utils.js"></script>
+        <script type="text/javascript" src="/js/Render.js"></script>
+        <script type="text/javascript" src="/js/Resume.js"></script>   
+        <link rel="stylesheet" type="text/css" href="/Styles.css"/>        
     </head>
     <body>
     <div class="container">
