Got template working using Babel

--- a/LChristakisResume.html
+++ b/LChristakisResume.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <title>Luke Christakis</title>
+	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <script type="text/javascript" src="/js/Utils.js"></script>
         <script type="text/javascript" src="/js/Render.js"></script>
-        <script type="text/javascript" src="/js/Resume.js"></script>   
+        <script type="text/babel" src="/js/Resume.js"></script>   
         <link rel="stylesheet" type="text/css" href="/Styles.css"/>        
     </head>
     <body>
