--- a/LChristakisResume.html
+++ b/LChristakisResume.html
@@ -2,9 +2,7 @@
     <head>
         <title>Luke Christakis</title>
 	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-        <script type="text/javascript" src="/js/Utils.js"></script>
-        <script type="text/javascript" src="/js/Render.js"></script>
-        <script type="text/javascript" src="/js/Resume.js"></script>   
+        <script type="text/javascript" src="Resume.js"></script>   
         <link rel="stylesheet" type="text/css" href="/Styles.css"/>        
     </head>
     <body>
