Switched back to setting font with em, fixed iOS scaling using viewport scaling

--- a/LChristakisResume.html
+++ b/LChristakisResume.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="initial-scale=1.0">
         <title>Luke Christakis</title>
 	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <script type="text/javascript" src="Resume.js"></script>   
