--- a/LChristakisResume.html
+++ b/LChristakisResume.html
@@ -2,9 +2,8 @@
     <head>
         <meta name="viewport" content="initial-scale=1.0">
         <title>Luke Christakis</title>
-	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <script type="text/javascript" src="Resume.js"></script>   
-        <link rel="stylesheet" type="text/css" href="/Styles.css"/>        
+        <link rel="stylesheet" type="text/css" href="Styles.css"/>        
     </head>
     <body>
     </body>
